# autonomous-roadmap-delivery

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
automation/: README.md  codex_phase_gated_delivery_automation_template.md  roadmap_closeout_checklist.md
config/: providers.example.yaml
docs/: adapters.md  architecture.md  autonomy-and-approval-policy.md  compatibility.md  contributor-workflow.md  evidence-benchmark.md  installing-claude.md  installing-codex.md  migration-guide.md  onboarding-wizard.md  privacy-and-sanitization.md  quickstart.md  release-notes-0.1.0.md  who-this-is-for.md
evals/: model-policy-prompts.md  review-fix-prompts.md  status-inspection-prompts.md
host-capabilities/: claude.yaml  codex.yaml  generic.yaml
roadmap_delivery/: __init__.py
roadmaps/: automated-roadmap-delivery-strategy.md  autonomous-roadmap-delivery-skill-phased-roadmap.md  delivered_autonomous-roadmap-delivery-skill-phased-roadmap.md  delivered_autonomous_operation_modes_and_adaptive_control_roadmap.md  delivered_framework_core_and_release_readiness_roadmap.md  delivered_multi_host_adapter_and_claude_plugin_roadmap.md  delivered_phase_model_policy_and_stall_control_roadmap.md  in_progress_autonomous_operation_modes_and_adaptive_control_roadmap.md  in_progress_framework_core_and_release_readiness_roadmap.md  in_progress_multi_host_adapter_and_claude_plugin_roadmap.md  in_progress_onboarding_wizard_and_proof_demos_roadmap.md  in_progress_phase_model_policy_and_stall_control_roadmap.md  not_started_autonomous_operation_modes_and_adaptive_control_roadmap.md  (+5 more)
(+273 files in other folders)
