[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "roadmap-delivery"
version = "0.0.0"
description = "Shared helpers for phase-gated roadmap delivery workflows."
requires-python = ">=3.9"

[project.scripts]
roadmap-delivery = "roadmap_delivery.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
